Adding more description for swagger
